modules/kibana/main.tf
/**
 * ## Kibana
 *
 * This module takes care of deployment of EC2 instances running Kibana using
 * an autoscaling group with a load balancer.
 *
 */

data "aws_subnet" "private" {
  count  = length(var.private_subnet_ids)
  id     = var.private_subnet_ids[count.index]
  vpc_id = var.vpc_id
}

resource "aws_alb_target_group" "kibana-https" {
  count    = lookup(var.alb, "deploy_elb", false) ? 0 : 1
  name     = "${var.name_prefix}-kibana-https"
  port     = 5602
  protocol = "HTTP"
  vpc_id   = var.vpc_id

  health_check {
    interval = 300
    protocol = "HTTP"
    port     = 5602
    matcher  = "401"
  }
  # health_check {
  #   interval = 300
  #   protocol = "HTTP"
  #   port     = 5601
  #   path     = "/status"
  #   matcher  = "200"
  # }
}

// Target group for redirect to https
resource "aws_alb_target_group" "kibana-http" {
  count    = lookup(var.alb, "deploy_elb", false) ? 0 : 1
  name     = "${var.name_prefix}-kibana-http"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id

  health_check {
    interval = 300
    matcher  = "301"
  }
}

data "template_file" "kibana-setup" {
  template = file("${path.module}/data/setup.tpl.sh")

  vars = {
    elasticsearch_url         = var.elasticsearch_url
    credstash_install_snippet = var.credstash_install_snippet
    credstash_get_cmd         = var.credstash_get_cmd
    credstash_context         = "env=${var.name_prefix}"
    kibana_version            = var.kibana_version
    nginx_username_key        = "${var.name_prefix}-kibana-basic-auth-username"
    nginx_password_key        = "${var.name_prefix}-kibana-basic-auth-password"
  }
}

resource "aws_security_group" "kibana-sg" {
  name        = "${var.name_prefix}-kibana-ec2"
  vpc_id      = var.vpc_id
  description = "Allow inboud HTTP (for HTTPS redirect), Kibana port (5602). Also everything outbound."

  tags = {
    Name = "${var.name_prefix}-kibana-ec2"
  }

  # Kibana
  ingress {
    from_port = 5602
    to_port   = 5602
    protocol  = "tcp"
    # TF-UPGRADE-TODO: In Terraform v0.10 and earlier, it was sometimes necessary to
    # force an interpolation expression to be interpreted as a list by wrapping it
    # in an extra set of list brackets. That form was supported for compatibilty in
    # v0.11, but is no longer supported in Terraform v0.12.
    #
    # If the expression in the following list itself returns a list, remove the
    # brackets to avoid interpretation as a list of lists. If the expression
    # returns a single list item then leave it as-is and remove this TODO comment.
    security_groups = [var.alb["security_group_id"]]
  }

  # Used for proper redirect to https
  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    # TF-UPGRADE-TODO: In Terraform v0.10 and earlier, it was sometimes necessary to
    # force an interpolation expression to be interpreted as a list by wrapping it
    # in an extra set of list brackets. That form was supported for compatibilty in
    # v0.11, but is no longer supported in Terraform v0.12.
    #
    # If the expression in the following list itself returns a list, remove the
    # brackets to avoid interpretation as a list of lists. If the expression
    # returns a single list item then leave it as-is and remove this TODO comment.
    security_groups = [var.alb["security_group_id"]]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_autoscaling_group" "kibana-asg" {
  count                = min(var.max_server_count, 1)
  availability_zones   = data.aws_subnet.private.*.availability_zone
  name                 = "${var.name_prefix}-kibana"
  max_size             = var.max_server_count
  min_size             = var.min_server_count
  desired_capacity     = var.desired_server_count
  launch_configuration = aws_launch_configuration.kibana-lc[0].name
  health_check_type    = "ELB"
  vpc_zone_identifier  = var.private_subnet_ids
  # TF-UPGRADE-TODO: In Terraform v0.10 and earlier, it was sometimes necessary to
  # force an interpolation expression to be interpreted as a list by wrapping it
  # in an extra set of list brackets. That form was supported for compatibilty in
  # v0.11, but is no longer supported in Terraform v0.12.
  #
  # If the expression in the following list itself returns a list, remove the
  # brackets to avoid interpretation as a list of lists. If the expression
  # returns a single list item then leave it as-is and remove this TODO comment.
  load_balancers = [var.alb["name"]]

  tag {
    key                 = "Name"
    value               = "${var.name_prefix}-kibana"
    propagate_at_launch = true
  }
}

resource "aws_launch_configuration" "kibana-lc" {
  count           = min(var.max_server_count, 1)
  name_prefix     = "${var.name_prefix}-kibana-"
  image_id        = var.ami
  instance_type   = var.instance_type
  key_name        = var.key_name
  security_groups = concat([aws_security_group.kibana-sg.id], var.extra_sg_ids)

  user_data = <<USER_DATA
#!/bin/bash
${data.template_file.kibana-setup.rendered}
USER_DATA


  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_elb" "kibana-elb" {
  count = lookup(var.alb, "deploy_elb", false) ? 1 : 0
  name = "${var.name_prefix}-kibana"
  subnets = var.public_subnet_ids
  # TF-UPGRADE-TODO: In Terraform v0.10 and earlier, it was sometimes necessary to
  # force an interpolation expression to be interpreted as a list by wrapping it
  # in an extra set of list brackets. That form was supported for compatibilty in
  # v0.11, but is no longer supported in Terraform v0.12.
  #
  # If the expression in the following list itself returns a list, remove the
  # brackets to avoid interpretation as a list of lists. If the expression
  # returns a single list item then leave it as-is and remove this TODO comment.
  security_groups = [var.alb["security_group_id"]]
  internal = lookup(var.alb, "deploy_elb_internal", true)

  listener {
    instance_port = 5602
    instance_protocol = "http"
    lb_port = 443
    lb_protocol = "https"
    ssl_certificate_id = var.alb["certificate_arn"]
  }

  listener {
    instance_port = 80
    instance_protocol = "http"
    lb_port = 80
    lb_protocol = "http"
  }

  # health_check {
  #   healthy_threshold = 2
  #   unhealthy_threshold = 5
  #   timeout = 10
  #   target = "HTTP:5603/"
  #   interval = 60
  # }

  cross_zone_load_balancing = lookup(var.alb, "deploy_elb_cross_zone", true)
  idle_timeout = 60
  connection_draining = true
  connection_draining_timeout = 60
  tags = {
    Name = "${var.name_prefix}-kibana-elb"
  }
}
